[package]
name = "kb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib",]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"


[dependencies.web-sys]
version = "0.3.69"
features = ["console",
           "Window",
           "Document",
           "HtmlCanvasElement",
           "CanvasRenderingContext2d",
           "Element",
           "Response",
           "Performance",
           "KeyboardEvent"]
